--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,14 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_DB: boxmagic
     ports:
-      - "5432:5432"
+      - "${DB_PORT:-55432}:5432"
     volumes:
       - boxmagic_db:/var/lib/postgresql/data
 
   redis:
     image: redis:7-alpine
     ports:
-      - "6379:6379"
+      - "${REDIS_PORT:-56379}:6379"
 
   api:
     build:
@@ -25,6 +25,7 @@ services:
       NODE_ENV: development
       DATABASE_URL: postgresql://postgres:postgres@db:5432/boxmagic?schema=public
       REDIS_URL: redis://redis:6379
+      WEB_ORIGIN: http://localhost:${WEB_PORT:-5180}
     ports:
       - "3101:3001"
     depends_on:
@@ -38,7 +39,7 @@ services:
       args:
         VITE_API_BASE_URL: http://localhost:3101
     ports:
-      - "5173:80"
+      - "${WEB_PORT:-5180}:80"
     depends_on:
       - api
 
