--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dev:mobile": "npm run dev -w apps/mobile",
     "start": "node apps/api/dist/src/main.js",
     "start:api": "node apps/api/dist/src/main.js",
-    "build": "npm run build -w apps/api && npm run build -w apps/web",
+    "build": "npm run prisma:generate -w apps/api && npm run build -w apps/api && npm run build -w apps/web",
     "test": "npm run test -w apps/api && npm run test -w apps/web",
     "lint": "npm run lint -w apps/api && npm run lint -w apps/web",
     "docker:up": "docker compose up -d --build",
