feat(v0.5.1): global owner center switching, suspension controls, and member UX fixes

--- a/.env.example
+++ b/.env.example
@@ -38,7 +38,7 @@ EXPO_ACCESS_TOKEN=
 
 # Seed (dev)
 SEED_DEFAULT_PASSWORD=DevPassword123!
-SEED_CENTER_NAME=Home Gym Demo
+SEED_CENTER_NAME=Felimor Pilates
 SEED_USER_1_EMAIL=francisca.beltran@example.com
 SEED_USER_1_NAME=Francisca Beltran
 SEED_USER_2_EMAIL=rreyes@example.com
